# Excelerate

./: .gitignore  ReadMe.md  all_parsed.py  api_calls.py  auth.py  build_output.txt  debug.py  log.py  main.py  main.spec  pdf_reporter.py  pyproject.toml  r.txt  requirements.txt  setup.py  sign_app.sh  t.md  test.py  verify.sh  win_setup.py  workbook.py
Development/: Ass.xlsx  dev.py  dev2.py  log.txt  test.xlsx
Excelerate3/app/: main.py
Version1/: debug.py  log.py  main_version1.py
Version1/assets/: icon.icns  logo.icns
Version1/parsers/: bhb_parser.py  boom_parser.py  kings_parser.py  vesper_parser.py
Version1/ui/: dashboard_ui_version1.py
Version2/: access_token.json  config.json  main.py
Version2/ml_models/: funder_classifer.py
Version2/services/: api_service.py  authentication_manager.py
Version2/tests/: test_authenticate_ui.py  test_authentication_manager.py
Version2/ui/: alder_ui.py  alder_ui2.py  authenticate_ui.py  dashboard_ui.py  white_rabbit_ui.py
app/: main.py  requirements.txt
app/config/: __init__.py  system_config.py
app/gui/: auth_window.py  base_window.py  dashboard.py  file_explorer.py
app/managers/: coordinator.py  database_manager.py  file_manager.py  portfolio.py
app/utils/: date_utils.py  export_portfolios.py
env/: pyvenv.cfg
excelerate/: pyvenv.cfg
parsers/: V.csv  acs_parser.py  bhb_parser.py  boom_parser.py  cv_parser.py  kings_parser.py  vesper_parser.py  weekly_totals_report.csv
parsers/dailies_cv/: friday.csv  (+4 more)
test_env/: pyvenv.cfg
ui/: authenticate_ui.py  dashboard_ui.py  login_ui.py  workbook_ui.py
(+88 files in other folders)
